1.1: (in progress)
    * Added support for "textEncoding" option to set encoding, with default UTF-8.

1.0:
    * Hopefully fixed the crasher bug by keeping us single-threaded
    * Added Actionscript, Lisp, IDL, Verilog, VHDL, XHTML  (any others I forgot?)
    * Added .cls and .sty as LaTeX extensions
    * Added maxFileSize option to keep us from hanging on huge files.

0.4:
    * Added Tcl, Lua, and JSP support
    * Can now configure appearance with "defaults write org.n8gray.QLColorCode ..." commands
    * Improved OCaml, C/C++ and Obj-C modes.

0.3:
    * Ensure highlight is compiled as a universal binary
    * If highlight fails to colorize a file render it as plain text
    * Added .command as an alternate extension for shell scripts
    * Added .mll and .mly extensions for OCaml
    * Include customized .css and .c language definition files
    * Created a slateGreen theme that matches my editor colors.  :-)

0.2:
    * Switched from Pygments to Highlight.  This should increase speed *and* language coverage.
    * Added thumbnailing support
    * Changed .tex UTI to agree with TeXShop's.
    * (Try to) let the system pick a different plugin if ours fails
    * Added UTIs for .css, .sql, .erl, and .sml

0.1: Initial release