@@ -15,6 +15,7 @@
 				<string>public.xml</string>
                 <string>com.apple.property-list</string>
                 <string>org.tug.tex</string>
+                <string>public.plain-text</string>
 			</array>
 		</dict>
 	</array>
@@ -72,7 +73,7 @@
          a given file is "source-code".  For things like .c and .m files that's
          not a problem; they're in the system already.  But for .ml files 
          we have to inform the system ourselves.  If there is a file type that
-         is supported by pygments but this plugin is not being called to 
+         is supported by highlight but this plugin is not being called to 
          quicklook it, try adding a type identifier for it below. -->
     <key>UTImportedTypeDeclarations</key>
         <array>
@@ -231,6 +232,7 @@
                     <key>public.filename-extension</key>
                     <array>
                         <string>erl</string>
+                        <string>hrl</string>
                     </array>
                 </dict>
             </dict>
